--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>Đây là demo git</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, hic
+      odio! Sint, quis numquam est et amet optio, error nulla perspiciatis quae
+      asperiores sunt molestiae, harum veritatis cum vero nostrum!
+    </p>
   </body>
 </html>
